test/mips/error/compiler/test_mips_error_compiler_009.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
main:
   j 0xhello