test/mips/error/compiler/test_mips_error_compiler_009.out


[E06] Error: Incorrect instruction syntax
   ╭─[assembly:8:6]
   │
 8 │    j 0xhello
   │      ───┬───  
   │         ╰───── Incorrect syntax
   │ 
   │ Note: Allowed formats:
   │       j addr
───╯

The syntax `j addr` failed with the following reason:
Error: found "xhello" but expected one of "\n", end of input
   ╭─[assembly:8:7]
   │
 8 │    j 0xhello
   │       ───┬──  
   │          ╰──── Unexpected input
   │          │    
   │          ╰──── while parsing this expression
───╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

